<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">


          <LinearLayout
              android:id="@+id/ll_cart"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:gravity="center_vertical"
              android:layout_margin="@dimen/margin_medium"
              tools:ignore="UseCompoundDrawables">
              <ImageView
                  android:layout_width="22dp"
                  android:layout_height="22dp"
                  android:src="@drawable/left_arrow"
                  />

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/cart"
                  android:textStyle="bold"
                  android:textColor="@color/black"
                  android:textSize="@dimen/text_x_large"
                  android:layout_marginStart="@dimen/margin_large"
                  android:layout_gravity="center_vertical"/>

          </LinearLayout>

          <View
              android:id="@+id/view1"
              android:layout_width="match_parent"
              android:layout_height="2dp"
              android:layout_marginTop="@dimen/margin_medium"
              app:layout_constraintTop_toBottomOf="@id/ll_cart"
              android:background="@drawable/view_background"/>

          <LinearLayout
              android:id="@+id/ll_product1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              app:layout_constraintTop_toBottomOf="@id/view1"
              android:layout_marginTop="@dimen/margin_medium">

              <com.makeramen.roundedimageview.RoundedImageView
                  android:id="@+id/storyImage"
                  android:layout_width="150dp"
                  android:layout_height="200dp"
                  android:scaleType="centerCrop"
                  android:layout_margin="@dimen/margin_large"
                  android:src="@drawable/image1"
                  app:riv_corner_radius="@dimen/margin_small"
                  app:riv_mutate_background="true" />

              <LinearLayout
                  android:id="@+id/ll_cloth_detail1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

                  <TextView
                      android:id="@+id/tv_cloth_name"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/snoopy_t_shirt"
                      android:textColor="@color/black"
                      android:textSize="@dimen/text_x_large"
                      android:textStyle="bold"
                      android:layout_marginTop="@dimen/margin_xxx_large"/>

                  <TextView
                      android:id="@+id/tv_cloth_code"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/ref_04559812"
                      android:textColor="@color/gray"
                      android:textSize="@dimen/text_large"
                      android:textStyle="bold"
                      android:layout_marginTop="@dimen/margin_x_small"/>

                  <TextView
                      android:id="@+id/tv_cloth_size"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/s"
                      android:textSize="@dimen/text_x_large"
                      android:textColor="@color/black"
                      android:textStyle="bold"
                      android:layout_marginTop="@dimen/margin_large"/>

                  <TextView
                      android:id="@+id/tv_cloth_price"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/_40"
                      android:textColor="@color/black"
                      android:textStyle="bold"
                      android:textSize="@dimen/text_x_large"
                      android:layout_marginTop="@dimen/margin_xx_large"/>


              </LinearLayout>

          </LinearLayout>

          <View
              android:id="@+id/view2"
              android:layout_width="match_parent"
              android:layout_height="2dp"
              android:layout_marginTop="@dimen/margin_medium"
              app:layout_constraintTop_toBottomOf="@id/ll_product1"
              android:background="@drawable/view_background"/>

          <LinearLayout
              android:id="@+id/ll_product2"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              app:layout_constraintTop_toBottomOf="@id/view2"
              android:layout_marginTop="@dimen/margin_medium">

              <com.makeramen.roundedimageview.RoundedImageView
                  android:id="@+id/Image"
                  android:layout_width="150dp"
                  android:layout_height="200dp"
                  android:scaleType="centerCrop"
                  android:layout_margin="@dimen/margin_large"
                  android:src="@drawable/image2"
                  app:riv_corner_radius="@dimen/margin_small"
                  app:riv_mutate_background="true" />

              <LinearLayout
                  android:id="@+id/ll_cloth_detail2"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

                  <TextView
                      android:id="@+id/tv_cloth_name2"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/snoopy_t_shirt"
                      android:textColor="@color/black"
                      android:textSize="@dimen/text_x_large"
                      android:textStyle="bold"
                      android:layout_marginTop="@dimen/margin_xxx_large"/>

                  <TextView
                      android:id="@+id/tv_cloth_code2"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/ref_04559812"
                      android:textColor="@color/gray"
                      android:textSize="@dimen/text_large"
                      android:textStyle="bold"
                      android:layout_marginTop="@dimen/margin_x_small"/>

                  <TextView
                      android:id="@+id/tv_cloth_size2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/s"
                      android:textSize="@dimen/text_x_large"
                      android:textColor="@color/black"
                      android:textStyle="bold"
                      android:layout_marginTop="@dimen/margin_large"/>

                  <TextView
                      android:id="@+id/tv_cloth_price2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/_30"
                      android:textColor="@color/black"
                      android:textStyle="bold"
                      android:textSize="@dimen/text_x_large"
                      android:layout_marginTop="@dimen/margin_xx_large"/>


              </LinearLayout>

          </LinearLayout>

          <View
              android:id="@+id/view3"
              android:layout_width="match_parent"
              android:layout_height="2dp"
              android:layout_marginTop="@dimen/margin_medium"
              app:layout_constraintTop_toBottomOf="@id/ll_product2"
              android:background="@drawable/view_background"/>

          <TextView
              android:id="@+id/tv_promo_code"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/view3"
              android:text="@string/do_you_have_a_promotional_code"
              android:textColor="@color/black"
              android:textSize="@dimen/text_large"
              android:textStyle="bold"
              android:layout_margin="@dimen/margin_medium"/>

          <View
              android:id="@+id/view4"
              android:layout_width="match_parent"
              android:layout_height="2dp"
              android:layout_marginTop="@dimen/margin_medium"
              app:layout_constraintTop_toBottomOf="@id/tv_promo_code"
              android:background="@drawable/view_background"/>


          <TextView
              android:id="@+id/tv_delivery"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/delivery"
              android:textStyle="bold"
              android:textColor="@color/black"
              android:textSize="@dimen/text_large"
              app:layout_constraintTop_toBottomOf="@id/view4"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="@dimen/margin_large"
              android:layout_marginTop="@dimen/margin_large"
              />

          <TextView
              android:id="@+id/tv_delivery_type"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/standard_free"
              android:textStyle="bold"
              android:textSize="@dimen/text_large"
              app:layout_constraintTop_toBottomOf="@id/view4"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="@dimen/margin_large"
              android:layout_marginTop="@dimen/margin_large"/>

          <androidx.appcompat.widget.AppCompatButton
              android:id="@+id/bt_buy"
              android:layout_width="match_parent"
              android:layout_height="53dp"
              android:layout_marginStart="@dimen/margin_large"
              android:layout_marginEnd="@dimen/margin_large"
              android:text="@string/buy_for_100"
              android:textColor="@color/white"
              android:textSize="@dimen/text_large"
              android:layout_marginTop="@dimen/margin_xxx_large"
             app:layout_constraintTop_toBottomOf="@id/tv_delivery"
              app:layout_constraintBottom_toBottomOf="parent"
              android:layout_marginBottom="@dimen/margin_xx_large"
              android:background="@drawable/btn_buy_background"/>

      </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>